# Memeos

./: README.md
memeos-core/: Cargo.toml
memeos-core/docs/: wasmpp.md
memeos-core/memeos_data/history/: history.txt
memeos-core/scripts/: compile_wat.sh
memeos-core/src/: lib.rs  main.rs
memeos-core/src/config/: network_config.rs
memeos-core/src/core/: block.rs  chain.rs  consensus.rs  genesis.rs  header.rs  mod.rs
memeos-core/src/crypto/: address.rs  hash.rs  keypair.rs  mod.rs  schnorr.rs
memeos-core/src/ledger/: eutxo.rs  mempool.rs  mod.rs  transaction.rs  verifier.rs
memeos-core/src/network/: mod.rs  node.rs  protocol.rs
memeos-core/src/state/: mod.rs  state_db.rs  verkle.rs
memeos-core/src/storage/: block_db.rs  mod.rs  utxo_db.rs
memeos-core/src/utils/: console.rs  mod.rs  serializer.rs  time.rs
memeos-core/src/wallet/: mod.rs  signer.rs  wallet.rs
memeos-core/src/wasmpp/: contract.rs  mod.rs  runtime.rs  vm.rs
memeos-core/tests/: hello.wat  schnorr_test.rs  transaction_test.rs  wasm_test.rs
